k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gzip-project
  labels:
    app: gzip-project
    environment: dev
    group: demo
    project: gzip-demo
    tier: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gzip-project
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: gzip-project
        environment: dev
        group: demo
        project: gzip-demo
        tier: devops
    spec:
      containers:
      - name: project-gzip
        image: gole/project-gzip:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 20m
            memory: 15Mi
