k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: gzip-project
    environment: dev
    group: demo
    project: gzip-demo
    tier: devops
  name: gzip-project
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: gzip-project
    environment: dev
    group: demo
    project: gzip-demo
    tier: devops
  type: ClusterIP
